Flex wrapping fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2345,9 +2345,7 @@ input, select, textarea {
   .project-image {
     break-after: column;
     opacity: 0.6;
-    /* background-color: #a89cc8; */
-    margin-right: 40px;
-    margin-bottom: 40px;
+    margin: auto;
     max-width: 100%;
     height: auto;
     object-fit: scale-down;
@@ -3533,15 +3531,16 @@ input, select, textarea {
 
     #main .projects {
       display: flex;
-      /* flex-wrap: wrap; */
+      flex-wrap: wrap;
       flex-direction: row;
       margin-bottom: 40px;
+      justify-content: space-between;
     }
 
     #main .project-desc {
       margin: auto;
       max-width: 490px;
-      min-width: 490px;
+      padding: 40px;
     }
 
 		#main .icon.major {
